add lamda usage
Signed-off-by: Halcyon666 <whalefallcl@gmail.com>